--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,26 @@
 @import "variables";
+
+html {
+    scroll-behavior: smooth;
+}
+body {
+    margin: 0 !important;
+}
+@keyframes float {
+    0% {
+        transform: translatey(0px);
+    }
+    50% {
+        transform: translatey(-20px);
+    }
+    100% {
+        transform: translatey(0px);
+    }
+}
+#arrow {
+    animation: float 1s ease-in-out infinite;
+}
+#logo-box {
+    transform-style: preserve-3d;
+    transform: translateZ(0);
+}
